--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "darkaonline/l5-swagger": "5.7.*",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "spatie/laravel-permission": "^2.31"
+        "spatie/laravel-permission": "^2.31",
+        "zircote/swagger-php": "2.*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
