--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "darkaonline/l5-swagger": "5.7.*",
         "fideloper/proxy": "^4.0",
         "fzaninotto/faker": "^1.8",
+        "grimzy/laravel-mysql-spatial": "^2.1",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "tymon/jwt-auth": "1.0.0-rc.3",
