--- a/docker-setup/docker.env
+++ b/docker-setup/docker.env
@@ -1,7 +1,7 @@
 APP_NAME=TvKing
 APP_ENV=production
 APP_KEY=base64:M/GPIxv5il8N3Ey+QMZ2pRyBqfUMQIlP4VlGY7khM4A=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost/tv-king/
 
 LOG_CHANNEL=single
