--- a/docker-setup/docker.env
+++ b/docker-setup/docker.env
@@ -1,8 +1,8 @@
 APP_NAME=TvKing
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:M/GPIxv5il8N3Ey+QMZ2pRyBqfUMQIlP4VlGY7khM4A=
 APP_DEBUG=true
-APP_URL=http://localhost/tv-king/
+APP_URL=http://localhost/
 
 LOG_CHANNEL=single
 
