--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,9 @@
-vendor
+.git
+.idea
+.env
 node_modules
+vendor
+storage/framework/cache/**
+storage/framework/sessions/**
+storage/framework/views/**
+bootstrap/cache/**
