--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "spatie/laravel-cors": "^1.4",
         "tymon/jwt-auth": "1.0.0-rc.3",
         "zircote/swagger-php": "2.*"
     },
